# EMBARCATECH

./: PLLA_ O FUTURO DOS SENSORES FLEXÍVEIS.docx  README.md  leitor de microclima.txt  pi pico w blink.txt  semaforo.txt
Artigos/: MEMRISTOR.docx  MOODLE.docx
Examples/BitDogLab/: Blink LED_RGB BitDogLab.c
Examples/C/: balanca.c  infectados.c  inverterNumero.c  temperatura.c
Examples/Pi Pico W/: Blink Pi Pico W.c  cofre_digital_Pico_W.c
Examples/Pico W/Blink/: Pi Pico W Blink.c
Examples/Pico W/Cofre/: cofre_digital.c  fluxograma-detalhado-cofre.mermaid
Examples/Pico/Blink/: Pi Pico Blink.c  readme.md
Examples/Pico/Cofre/: readme.md
Examples/Pico/Semaforo/: readme.md
LIVROS/: README.md
Pi Pico RP2040/: Semaforo Pi Pico RP2040.txt
Pi Pico W RP2040/: Blink Pi Pico W RP 2040.txt
Projeto Final/: CMakeLists.txt  arm_robot.c
Projeto Final/Robo Arm/: CMakeLists.txt  main.c
images/: raspberry_pico.jfif
